docker-kubernetes-lab/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showcase-api
  namespace: showcase
spec:
  replicas: 2
  selector:
    matchLabels:
      app: showcase-api
  template:
    metadata:
      labels:
        app: showcase-api
    spec:
      containers:
        - name: api
          image: showcase-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
