docker-kubernetes-lab/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showcase-api
  namespace: showcase
spec:
  selector:
    app: showcase-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
