docker-kubernetes-lab/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: showcase-api
  namespace: showcase
spec:
  rules:
    - host: showcase.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: showcase-api
                port:
                  number: 80
